# proy_sid_pan

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG_NORMALIZATION.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: README.md  settings.json
config/: logging_config.yaml  model_config.yaml  prompt_templates.yaml
docs/ui-ux/prototype-desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/ui-ux/prototype-desktop/src-tauri/capabilities/: default.json
docs/ui-ux/prototype-desktop/src-tauri/src/: lib.rs  main.rs
docs/ui-ux/prototype-desktop/src-tauri/src/appbar/: mod.rs  registration.rs  subclass.rs
evals/: EVAL-01-admin-feature-scaffold.md  EVAL-02-dokploy-traefik-404.md  EVAL-03-trailing-slash-404.md  EVAL-04-django-app-conventions.md  EVAL-05-regresion-x-tenant-slug.md  README.md  RESULTS.md
pending/: configurar-envio-email.md
plans/: README.md
prd/: ADMIN_PANEL_ROADMAP.md  BACKEND_ROADMAP.md  MIGRATION_SUMMARY.md  README.md  STRUCTURE.md  rbac-subscription-system.md
reports/: 2026-02-27-backend-status.md  2026-03-15-bugfix-desktop-snippets.md  2026-04-01-deploy-backend-dokploy.md  2026-04-03-deploy-frontend-admin-dokploy.md  2026-04-03-deploy-frontend-next-vista-dokploy.md  2026-04-03-deploy-frontend-workspace-dokploy.md  2026-04-04-deploy-desktop-produccion.md  2026-06-15-implementacion-pago-yape.md  2026-06-17-feature-gates-analysis.md  2026-06-20-implementacion-chat-ia.md  2026-06-21-trial-30-dias-professional-descarga-desktop.md  2026-06-22-footer-administrable-hub.md  2026-06-22-formulario-contacto-recaptcha.md  2026-06-26-chat-workspace-3-fases.md  2026-06-26-implementacion-ideas-desktop-sidebar.md  2026-06-27-chat-desktop-sidebar.md  2026-06-27-chat-mensajes-guardados-self-chat.md  2026-06-27-login-cors-502-oom-gunicorn.md  2026-06-27-vault-datos-protegidos-contrasena-maestra.md  2026-06-28-vault-desktop-sidebar.md  2026-06-29-buscador-chat-whatsapp-workspace.md  2026-06-29-buscador-general-workspace.md  2026-06-29-export-datos-workspace.md  2026-06-29-import-contactos-bookmarks-workspace.md  2026-06-29-import-notas-tareas-calendario-workspace.md  2026-06-29-reportes-workspace-fase1.md  2026-06-29-reportes-workspace-fase2-devops.md  2026-06-30-reportes-workspace-fase3-actividad-uso.md  2026-07-01-anuncios-modal-hub.md  2026-07-01-catalogo-servicios-dinamico.md  2026-07-02-anuncios-tarjetas-desktop.md  2026-07-03-digisider-branding-pwa-vistas-publicas.md  2026-07-07-colaboracion-equipo-compartir-asistentes.md  2026-07-08-compartir-desktop-sidebar.md  2026-07-08-notas-filtro-por-etiqueta.md  2026-07-08-notas-tags-normalizacion-sugerencias.md  2026-07-08-notas-workspace-etiquetas-no-se-guardaban.md  (+15 more)
roadmaps/: BACKEND_ROADMAP.md  (+4 more)
(+790 files in other folders)
