[project]
name = "proy_temp"
version = "0.1.0"
description = "AI Development Project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core AI/LLM
    # "anthropic>=0.40.0",
    # "openai>=1.50.0",
    # "litellm>=1.50.0",

    # Frameworks
    # "langchain>=0.3.0",
    # "pydantic>=2.0",

    # API
    # "fastapi>=0.115.0",
    # "uvicorn[standard]>=0.32.0",

    # Data
    # "pandas>=2.2.0",
    # "numpy>=2.0.0",

    # Vector/Embeddings
    # "chromadb>=0.5.0",

    # Utilities
    # "python-dotenv>=1.0.0",
    # "pyyaml>=6.0",
    # "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
