[package]
name = "prototype-desktop"
version = "0.0.1"
description = "Prototype Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "prototype_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "prototype-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
